plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
    id 'io.freefair.lombok' version "9.5.0"
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = minecraft_version + "-" + mod_version + "-" + "NeoForge"
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
        }

        server {
            server()
            programArgument '--nogui'
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources {
    srcDir('src/generated/resources')
    exclude("src/generated/**/.cache")
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
    implementation "curse.maven:hostile-neural-networks-552574:${hostileneuralnetworks_version_id}"
    implementation "curse.maven:placebo-283644:${placebo_version_id}"

    compileOnly "org.projectlombok:lombok:${lombok}"
    annotationProcessor "org.projectlombok:lombok:${lombok}"

    // Just Enough Items
    implementation "curse.maven:jei-238222:${jei_version}"

    //Curios
    runtimeOnly "curse.maven:curios-309927:6529130"


    //region For testing
    runtimeOnly "curse.maven:observable-509575:5733591"
    runtimeOnly "curse.maven:architectury-api-419699:5786327"
    runtimeOnly "curse.maven:kotlin-for-forge-351264:5978393"
    runtimeOnly "curse.maven:ftb-library-forge-404465:6136529"
    runtimeOnly "curse.maven:mekanism-268560:7132168"
    //endregion
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version                   : minecraft_version,
            minecraft_version_range             : minecraft_version_range,
            neo_version                         : neo_version,
            loader_version_range                : loader_version_range,
            mod_id                              : mod_id,
            mod_name                            : mod_name,
            mod_license                         : mod_license,
            mod_version                         : mod_version,
            mod_authors                         : mod_authors,
            mod_description                     : mod_description,
            hostileneuralnetworks_version_id    : hostileneuralnetworks_version_id,
            placebo_version_id                  : placebo_version_id
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/meta"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}